infra/k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: hush-app-client
          image: aritradevelops/hush_app_web
          ports:
            - containerPort: 3000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: client-service
# spec:
#   type: NodePort
#   selector:
#     component: client
#   ports:
#     - port: 3000
#       targetPort: 3000
#       nodePort: 31515
